# okta-email-template-downloader

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  main.rs
src/config/: loader.rs  mod.rs  model.rs
src/export/: format_html.rs  mod.rs  paths.rs  writer.rs
src/flow/: choose_brand.rs  choose_destination.rs  choose_template.rs  mod.rs  run.rs
src/okta/: client.rs  models.rs
